--- a/index.html
+++ b/index.html
@@ -1,44 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset = "UTF-8">
-    <title>Leaflet Map</title>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-     crossorigin=""/>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
-</head>
-
-<style>
+  <meta charset="UTF-8">
+  <title>Leaflet Map</title>
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+    crossorigin=""
+  />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
+  <style>
     #map {
-      height: 98vh; /* Full viewport height */
+      height: 98vh;
+    }
+    .legend {
+      background: white;
+      padding: 10px;
+      font-size: 14px;
+      line-height: 1.5;
+    }
+    .legend div {
+      margin-bottom: 4px;
+    }
+    .legend div:hover {
+      background-color: #f0f0f0;
     }
   </style>
-
+</head>
 
 <body>
-<div id="map"></div>
-      <!-- Make sure you put this AFTER Leaflet's CSS -->
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-     crossorigin=""></script>
+  <div id="map"></div>
 
-<script>
-    const map = L.map('map').setView([30.9375, 14.3754], 2.5);
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+    crossorigin=""></script>
+
+  <script src="main.js"></script>
+
+  <script>
+    const map = L.map('map').setView([22.9375, 14.3754], 2.5);
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       attribution: '&copy; OpenStreetMap contributors'
     }).addTo(map);
-</script>
 
-<script src="main.js"></script>
+    const categoryColors = {
+      Politics: '#0004ffff',
+      Environmental: '#0f962eff',
+      Health: '#e74c3c',
+      Finance: '#f1c40f',
+      Conflict: '#000000ff'
+    };
 
+    const categoryMarkers = {
+      Politics: [],
+      Environmental: [],
+      Health: [],
+      Finance: [],
+      Conflict: []
+    };
 
+    let allMarkers = [];
+
+    Papa.parse("Global Affairs.csv", {
+      download: true,
+      header: true,
+      complete: function(results) {
+        results.data.forEach(row => {
+          const lat = parseFloat(row.Latitude);
+          const lng = parseFloat(row.Longitude);
+          const category = row.Category?.trim();
+          const color = categoryColors[category] || 'gray';
+
+          const title = row.popupText || "Unknown location";
+          const description = row.Description || "";
+          const link = row["News Link"] || "#";
+
+          if (!isNaN(lat) && !isNaN(lng) && categoryMarkers[category]) {
+            const popupContent = `
+              <strong>${title}</strong><br>
+              <p>${description}</p>
+              <a href="${link}" target="_blank">Read more</a>
+            `;
+
+            const marker = L.circleMarker([lat, lng], {
+              radius: 8,
+              color: color,
+              fillColor: color,
+              fillOpacity: 1
+            }).bindPopup(popupContent);
+
+            marker.addTo(map);
+            categoryMarkers[category].push(marker);
+            allMarkers.push(marker);
+          }
+        });
+
+        addLegend(); // ✅ Add legend after markers are loaded
+      }
+    });
+
+    function addLegend() {
+      const legend = L.control({ position: 'bottomleft' });
+
+      legend.onAdd = function (map) {
+        const div = L.DomUtil.create('div', 'legend');
+        const categories = {
+          Conflict: '#000000ff',
+          Politics: '#0004ffff',
+          Finance: '#f1c40f',
+          Environmental: '#0f962eff',
+          Health: '#e74c3c'
+        };
+
+        for (const [label, color] of Object.entries(categories)) {
+          div.innerHTML += `
+            <div style="cursor:pointer;" onclick="filterCategory('${label}')">
+              <i style="background:${color}; width: 12px; height: 12px; display: inline-block; margin-right: 6px;"></i>
+              ${label}
+            </div>
+          `;
+        }
+
+        div.innerHTML += `
+          <div style="cursor:pointer; margin-top: 8px;" onclick="showAllPopups()">
+            <strong>Show All</strong>
+          </div>
+        `;
+
+        return div;
+      };
+
+      legend.addTo(map);
+    }
+
+    function filterCategory(selectedCategory) {
+      allMarkers.forEach(marker => map.removeLayer(marker));
+      categoryMarkers[selectedCategory]?.forEach(marker => {
+        marker.addTo(map);
+        marker.openPopup(); // optional
+      });
+    }
+
+    function showAllPopups() {
+      allMarkers.forEach(marker => {
+        marker.addTo(map);
+        marker.openPopup(); // optional
+      });
+    }
+  </script>
 </body>
 </html>
-
-
- 
- 
- 
